--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "metro4": "^4.4.1",
+    "uplot": "^1.2.2",
     "vue": "^3.0.2"
   },
   "devDependencies": {
@@ -18,8 +19,8 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0-0"
+    "eslint": "^7.12.1",
+    "eslint-plugin-vue": "^7.1.0"
   },
   "eslintConfig": {
     "root": true,
