--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -10,12 +10,17 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+        with:
+          node-version: '14'
+      - run: yarn install
+      - run: yarn build
 
       - name: GitHub Pages
         uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
           keep_history: false
-          build_dir: source
+          build_dir: dist
           commit_message: "Pages from: ${{ github.sha }}"
         env:
           GITHUB_TOKEN: ${{ secrets.GH_PAT }}
