--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -15,6 +15,8 @@ jobs:
           node-version: '14'
       - run: yarn install
       - run: yarn build
+        env:
+          PUBLIC_PATH: https://patrickelectric.work/MGroundStation/
 
       - name: GitHub Pages
         uses: crazy-max/ghaction-github-pages@v2.1.3
