--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/leaflet": "^1.5.19",
     "@vue-leaflet/vue-leaflet": "^0.1.2",
     "core-js": "^3.6.5",
     "install": "^0.13.0",
@@ -27,7 +28,7 @@
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/eslint-config-typescript": "^5.0.2",
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.12.1",
+    "eslint": "^6.8.0",
     "eslint-plugin-vue": "^7.1.0",
     "typescript": "~3.9.3"
   },
