github: test: Add yarn check
Signed-off-by: Patrick José Pereira <patrickelectric@gmail.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,4 +12,5 @@ jobs:
         with:
           node-version: '14'
       - run: yarn install
+      - run: yarn check
       - run: yarn run lint --max-warnings=0 --no-fix
