--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@types/leaflet": "^1.5.19",
     "@vue-leaflet/vue-leaflet": "^0.1.2",
+    "@vue/cli-plugin-pwa": "^4.5.8",
     "core-js": "^3.6.5",
     "install": "^0.13.0",
     "leaflet": "^1.7.1",
