--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "install": "^0.13.0",
     "leaflet": "^1.7.1",
     "metro4": "^4.4.1",
+    "node-sass": "^5.0.0",
+    "sass-loader": "^10.0.5",
     "uplot": "^1.2.2",
     "vue": "^3.0.2",
     "vue-flight-indicators": "^0.1.1"
