package: Add no-trailing-spaces rule
Signed-off-by: Patrick José Pereira <patrickelectric@gmail.com>

--- a/package.json
+++ b/package.json
@@ -49,6 +49,10 @@
       "parser": "@typescript-eslint/parser"
     },
     "rules": {
+      "no-trailing-spaces": ["error", {
+        "skipBlankLines": false,
+        "ignoreComments": false
+      }],
       "indent": [
         "error",
         4
