--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
       "parser": "@typescript-eslint/parser"
     },
     "rules": {
+      "no-inner-declarations": 0,
       "no-trailing-spaces": ["error", {
         "skipBlankLines": false,
         "ignoreComments": false
