--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "sass-loader": "^10.0.5",
     "uplot": "^1.2.2",
     "vue": "^3.0.2",
-    "vue-flight-indicators": "^0.1.1"
+    "vue-flight-indicators": "^0.1.1",
+    "vue3-sfc-loader": "^0.7.3"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.33.0",
@@ -53,14 +54,20 @@
     },
     "rules": {
       "no-inner-declarations": 0,
-      "no-trailing-spaces": ["error", {
-        "skipBlankLines": false,
-        "ignoreComments": false
-      }],
-      "comma-spacing": ["error", {
-        "before": false,
-        "after": true
-      }],
+      "no-trailing-spaces": [
+        "error",
+        {
+          "skipBlankLines": false,
+          "ignoreComments": false
+        }
+      ],
+      "comma-spacing": [
+        "error",
+        {
+          "before": false,
+          "after": true
+        }
+      ],
       "indent": [
         "error",
         4
